[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.4",
    "setuptools_scm_git_archive",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
fallback_version = "999"

[tool.pytest.ini_options]
junit_family = "xunit2"
testpaths = "pvlib/tests"