[metadata]
name = pvlib
description = A set of functions and classes for simulating the performance of photovoltaic energy systems.
long_description = file: README.md
long_description_content_type = text/markdown
author = pvlib python Developers
author_email = holmgren@email.arizona.edu
maintainer = pvlib python Developers
maintainer_email = holmgren@email.arizona.edu
license = BSD 3-Clause
license-file = LICENSE
keywords = photovoltaic solar-energy renewable-energy renewables
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
url = https://github.com/pvlib/pvlib-python
project_urls =
    Bug Tracker = https://github.com/pvlib/pvlib-python/issues
    Documentation = https://pvlib-python.readthedocs.io/
    Source Code = https://github.com/pvlib/pvlib-python

[options]
zip_safe = True
include_package_data = True
setup_requires = setuptools_scm
python_requires = >=3.6
install_requires =
    importlib_metadata>=1.0.0; python_version < '3.8'
    importlib_resources>=1.3.0; python_version < '3.9'
    dataclasses; python_version < '3.7'
    numpy >= 1.12.0
    pandas >= 0.220
    pytz
    requests
    scipy >= 1.2.0

[options.extras_require]
all =
    %(optional)s
    %(doc)s
    %(test)s
optional =
    cython
    ephem
    netcdf4
    nrel-pysam
    numba
    pvfactors
    siphon
    statsmodels
    tables
    cftime >= 1.1.1
doc =
    ipython
    matplotlib
    sphinx == 3.1.2
    sphinx_rtd_theme == 0.5.0
    sphinx-gallery
    docutils == 0.15.2
    pillow
    netcdf4
    siphon
    tables
    sphinx-toggleprompt >= 0.0.5
test =
    flake8
    nose
    pytest >= 6.0
    pytest-cov
    pytest-mock
    pytest-timeout
    pytest-rerunfailures
    pytest-remotedata

[flake8]
max-line-length = 79
ignore = E201, E241, E226, W503, W504
exclude = pvlib/_version.py docs dist
